tests/snapshots/snapshots__error_input_not_found.snap
---
source: tests/snapshots.rs
expression: json
---
{
  "schema_version": "0.1.1",
  "error": true,
  "code": 66,
  "message": "input not found: /tmp/missing.ogg",
  "category": "input",
  "retryable": false,
  "retry_after_ms": null,
  "hint": "check the file path and try again",
  "docs_url": "https://github.com/daniloaguiarbr/whisper-macos-cli/blob/main/docs/TROUBLESHOOTING.md",
  "correlation_id": "11111111-1111-1111-1111-111111111111"
}
